--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meme-maker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,8 +21,10 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "hbs": "^4.1.1"
+    "hbs": "^4.1.1",
+    "mongoose": "^5.9.9"
   }
 }
