--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +22,12 @@
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "hbs": "^4.1.1",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "morgan": "^1.10.0",
+    "session-file-store": "^1.4.0"
   }
 }
