still working on flickity

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "flickity": "^2.2.1",
     "hbs": "^4.1.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
