--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hbs": "^4.1.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "session-file-store": "^1.4.0"
   }
 }
