--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meme-maker",
   "version": "1.0.0",
-  "description": "",
+  "description": "A project to create and publish memes.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -31,5 +31,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "session-file-store": "^1.4.0"
-  }
+  },
+  "keywords": []
 }
